Fix bug on mobile

--- a/assert/css/components/extra/extra-elements.scss
+++ b/assert/css/components/extra/extra-elements.scss
@@ -54,11 +54,11 @@
     position: absolute;
     width: 15rem;
     left: -4rem;
-    top: -4rem;
+    top: -8rem;
     transform: rotate(-108deg);
     background-size: 15rem;
-    right: 0;
-    height: 40vh;
+    right: unset;
+    height: 34%;
   }
 
   @include tablet {
